; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_config.c_git_get_color_config.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_config.c_git_get_color_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_color_slot = common dso_local global i32 0, align 4
@parsed_color = common dso_local global i32 0, align 4
@get_color_found = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @git_get_color_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @git_get_color_config(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32, i32* @get_color_slot, align 4
  %10 = call i32 @strcmp(i8* %8, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %25, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %12
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @config_error_nonbool(i8* %16)
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* @parsed_color, align 4
  %21 = call i64 @color_parse(i8* %19, i32 %20)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i32 -1, i32* %4, align 4
  br label %26

24:                                               ; preds = %18
  store i32 1, i32* @get_color_found, align 4
  br label %25

25:                                               ; preds = %24, %3
  store i32 0, i32* %4, align 4
  br label %26

26:                                               ; preds = %25, %23
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @strcmp(i8*, i32) #1

declare dso_local i32 @config_error_nonbool(i8*) #1

declare dso_local i64 @color_parse(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
